# python_janus_client

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README  README.md  basic_tutorial_1.py  basic_tutorial_2.py  basic_tutorial_3.py  basic_tutorial_4.py  core.py  eg_videocall.py  eg_videocall_in.py  eg_videocall_out.py  gstreamer_empty_plugin_test_case.py  janus_videoroom.py  lt_limmengkiat_name_my.crt  main.py  main_bak.py  mkdocs.yml  plugin.py  plugin_base.py  plugin_textroom.py  plugin_textroom_bak.py  pyproject.toml  session.py  setup.cfg  steps_to_publish_new_version.sh  test_echotest.py  test_ffmpeg.py  test_gst_videoroom.py  test_http.py  test_videocall.py  video_room_plugin.py  webrtc-sendrecv.py  z_setup.cfg
.clinerules/: documentation-building.md  documentation-philosophy.md  hatch-tooling.md  memory-bank.md  python-best-practices.md  testing-guidelines.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  docs.yml
docs/: conf.py  index.md  index.rst  plugin.rst  plugins.md  reference.md  session.md  session.rst  transport.md  transport.rst
janus_client/: __init__.py  admin_monitor.py  core.py  media.py  message_transaction.py  plugin_base.py  plugin_echotest.py  plugin_text_room.py  plugin_textroom.py  plugin_video_call.py  plugin_video_room.py  plugin_video_room_ffmpeg.py  session.py  transport.py  transport_http.py  transport_websocket.py
janus_client/experiments/: README.md  plugin_video_room_ffmpeg.py  plugin_video_room_gst.py
janus_client_py/: __init__.py  core.py  plugin_base.py
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/plugins/: index.html
site/search/: search_index.json
site/session/: index.html
site/transport/: index.html
test/: test_admin.py  test_is_subset.py  test_multi_session_plugin.py  test_plugin.py  test_plugin_base.py  test_plugin_text_room.py  test_plugin_video_call.py  test_plugin_video_room.py  test_plugin_videocall.py  test_transport.py  util.py
tests/: conftest.py  public_test_videos.json  test_admin.py  test_multi_session_plugin.py  test_plugin.py  test_plugin_textroom.py  test_plugin_video_call.py  test_plugin_video_room.py  test_transport.py  util.py
