[tool.poetry]
name = "janus-client"
version = "0.4.5"
description = "Janus WebRTC async client in Python."
authors = ["Joseph Lim <josephlim_94@hotmail.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "janus_client"}]
repository = "https://github.com/josephlim94/janus_gst_client_py"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
websockets = "^11.0.3"
aiortc = "^1.5.0"
ffmpeg-python = "^0.2.0"
numpy = ">=1.21.6,<1.22"
av = "^10.0.0"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
