[project]
name = "janus-client"
version = "0.7.3"
description = "Janus WebRTC gateway Python async client."
authors = [
    {name = "Joseph Lim", email = "josephlim_94@hotmail.co.uk"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<3.14"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "websockets>=11.0.3",
    "aiortc>=1.5.0",
    "aiohttp>=3.8.5",
]

[project.urls]
Repository = "https://github.com/josephlim94/janus_gst_client_py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["janus_client"]

[tool.hatch.envs.default]
dependencies = [
    "coverage>=7.2.7",
    "mkdocs-material>=9.6.20",
    "mkdocstrings>=0.23.0",
    "mkdocstrings-python>=1.7.5",
    "griffe>=0.38.0",
    "python-dotenv>=1.0.0",
]

[[tool.hatch.envs.default.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.default.scripts]
docs-build = "python -W ignore::DeprecationWarning:mkdocs_autorefs -m mkdocs build --clean --strict"
docs-serve = "mkdocs serve"
test = "python -m pytest"
test-cov = "coverage run -m pytest"
test-cov-report = "coverage report"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "python-dotenv",
]
