[metadata]
name = janus-client
version = 0.0.3
author = Lim Meng Kiat
author_email = mengkiatlim@gmail.com
description = Janus webrtc client, to be used with asyncio.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josephlim94/janus_gst_client_py
project_urls =
    BugTracker = https://github.com/josephlim94/janus_gst_client_py/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = janus_client
python_requires = >=3.7
install_requires =
    websockets